añadimos variables in/out problema bus

--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -37,7 +37,8 @@
    "outputs": [],
    "source": [
     "# variables\n",
-    "\n"
+    "\n",
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]"
    ]
   },
   {
