añadido missión impossible

--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -47,8 +47,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Calculate the number of stops.\n",
-    "\n"
+    "# 1. Calculate the number of stops.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "9\n",
+    "```"
    ]
   },
   {
@@ -58,8 +67,17 @@
    "outputs": [],
    "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
-    "# Each item depends on the previous item in the list + in - out.\n",
-    "\n"
+    "# Each item depends on the previous item in the list + in - out.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "[10, 13, 11, 10, 14, 10, 7, 5, 4]\n",
+    "```"
    ]
   },
   {
@@ -68,8 +86,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Find the maximum occupation of the bus.\n",
-    "\n"
+    "# 3. Find the maximum occupation of the bus.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "14\n",
+    "```"
    ]
   },
   {
@@ -83,11 +110,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "9.333333333333334\n",
+    "3.197221015541813\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
