--- a/mission-impossible/mission-impossible.ipynb
+++ b/mission-impossible/mission-impossible.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# Mission Impossible\n",
+    "\n",
     "## Intro\n",
     "*Good morning, Mr. Hunt. Your mission, should you choose to accept it, involves the recovery of a stolen item designated \"Chimera.\" You may select any two team members, but it is essential that the third member of your team be Nyah Nordoff-Hall. She is a civilian, and a highly capable professional thief. You have forty-eight hours to recruit Miss Hall and meet me in Seville to receive your assignment. As always, should any member of your team be caught or killed, the Secretary will disavow all knowledge of your actions. And Mr. Hunt, the next time you go on holiday, please be good enough to let us know where you're going. This message will self-destruct in five seconds.*\n",
     "\n",
@@ -123,6 +124,16 @@
     "* Enumerate: https://www.programiz.com/python-programming/methods/built-in/enumerate\n",
     "* Decibel: https://en.wikipedia.org/wiki/Decibel\n",
     "\n",
+    "## Goals\n",
+    "\n",
+    "1. Treatment of lists\n",
+    "2. Use of for loop\n",
+    "3. Use of conditional if-elif-else\n",
+    "4. Use of the functions range(), len()\n",
+    "5. Use of print()\n",
+    "6. Use of enumerate()\n",
+    "\n",
+    "\n",
     "## Bonus\n",
     "Now you have the role of Ethan's hacker. To cheat the security system you are going to execute a computer code on the list dbs and you are going to **reduce** all values higher than 20 in 12 dBs but the ones higher than 30 in 18 dBs. Then confirm the result of your operation by printing the new modified dbs list on the screen."
    ]
@@ -148,13 +159,6 @@
     "[0, 1, 0, 0, 0, 0, 1, 0, 1, 11, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 22, 15, 0, 0]\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
