--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -106,28 +106,133 @@
    "outputs": [],
    "source": [
     "# assign a variable to the list of temperatures\n",
+    "temperatures_C = [33,66,65,0,59,60,62,64,70,76,80,81,80,83,90,79,61,53,50,49,53,48,45,39]\n",
     "\n",
-    "# 1. Calculate the minimum of the list and print the value using print()\n",
-    "\n",
-    "\n",
-    "# 2. Calculate the maximum of the list and print the value using print()\n",
-    "\n",
-    "\n",
-    "# 3. Items in the list that are greater than 70ºC and print the result\n",
-    "\n",
-    "\n",
-    "# 4. Calculate the mean temperature throughout the day and print the result\n",
-    "\n",
-    "\n",
-    "# 5.1 Solve the fault in the sensor by estimating a value\n",
-    "\n",
-    "\n",
-    "# 5.2 Update of the estimated value at 03:00 on the list\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Bonus: convert the list of ºC to ºFarenheit\n",
-    "\n"
+    "# 1. Calculate the minimum of the list and print the value using print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "minimum = 0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Calculate the maximum of the list and print the value using print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "maximum = 90\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Items in the list that are greater than 70ºC and print the result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "temperatures higher or equal than 70ºC [70, 76, 80, 81, 80, 83, 90, 79]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Calculate the mean temperature throughout the day and print the result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "mean = 60.25\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5.1 Solve the fault in the sensor by estimating a value\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "Estimation of the temperature at 3:00 = 62.0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5.2 Update of the estimated value at 03:00 on the list\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "Corrected temperatures after estimation:  [33, 66, 65, 62.0, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bonus: convert the list of ºC to ºFarenheit\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "Temperatures in Fahrenheit Grades = [91.4, 150.8, 149.0, 143.60000000000002, 138.2, 140.0, 143.60000000000002, 147.2, 158.0, 168.8, 176.0, 177.8, 176.0, 181.4, 194.0, 174.20000000000002, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n",
+    "```"
    ]
   },
   {
@@ -144,12 +249,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Print True or False depending on whether you would change the cooling system or not\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "True\n",
+    "```"
    ]
   },
   {
@@ -165,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,8 +289,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "[8, 9, 10, 11, 12, 13, 14, 15]```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,8 +308,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "True\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,13 +328,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "62.833333333333336\n",
+    "145.1\n",
+    "145.1 145.10000000000002\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 4. Standard deviation of each of the lists. How they relate?\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "14.633485192833897\n",
+    "26.34027334710101\n",
+    "26.34027334710101 26.340273347101014\n",
+    "```"
    ]
   },
   {
