--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# Duel of sorcerers\n",
+    "## Intro\n",
     "You are witnessing an epic battle between two powerful sorcerers: Gandalf and Saruman. Each sorcerer has 10 spells of variable power in their mind and they are going to throw them one after the other. The winner of the duel will be the one who wins more of those clashes between spells. Spells are represented as a list of 10 integers whose value equals the power of the spell.\n",
     "```\n",
     "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
@@ -21,7 +22,10 @@
     "* Saruman wins\n",
     "* Tie\n",
     "\n",
-    "<img src=\"images/content_lightning_bolt_big.jpg\" width=\"400\">"
+    "<img src=\"images/content_lightning_bolt_big.jpg\" width=\"400\">\n",
+    "\n",
+    "## LINKS: \n",
+    "* zip: https://www.programiz.com/python-programming/methods/built-in/zip"
    ]
   },
   {
@@ -38,7 +42,6 @@
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
-    "\n",
     "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
     "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]"
    ]
@@ -62,14 +65,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "6\n",
+    "4\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
-    "# Print the result based on the winner.\n",
-    "\n"
+    "# Print the result based on the winner.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "Gandalf wins\n",
+    "```"
    ]
   },
   {
@@ -82,7 +105,8 @@
     "2. Use of **for loop**\n",
     "3. Use of conditional **if-elif-else**\n",
     "4. Use of the functions **range(), len()**\n",
-    "5. Print"
+    "5. print()\n",
+    "6. zip()"
    ]
   },
   {
@@ -143,8 +167,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign spell power lists to variables\n",
-    "\n"
+    "# Assign spell power lists to variables\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "([50, 40, 40, 10, 50, 10, 40, 50, 10, 50],\n",
+    " [45, 45, 25, 50, 25, 40, 10, 45, 10, 10])\n",
+    " ```"
    ]
   },
   {
@@ -156,14 +190,26 @@
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
     "\n",
     "\n",
+    "\n",
     "# Execution of spell clashes\n",
     "\n",
-    "\n",
+    "# check clashes\n",
     "\n",
     "# check for 3 wins in a row\n",
     "\n",
+    "# check the winner\n",
     "\n",
-    "# check the winner\n"
+    "# count sum of clashes\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "Gandalf wins\n",
+    "```"
    ]
   },
   {
@@ -172,8 +218,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Average of each of the spell lists.\n",
-    "\n"
+    "# 3. Average of each of the spell lists.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "35.0\n",
+    "30.5\n",
+    "```"
    ]
   },
   {
@@ -182,8 +238,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "# 4. Standard deviation of each of the spell lists.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "16.881943016134134\n",
+    "15.56438241627338\n",
+    "```"
    ]
   },
   {
