--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Robin Hood:\n",
+    "# Robin Hood\n",
+    "## Intro\n",
     "We are in a competition to win the archery contest in Sherwood. With our bow and arrows we shoot on a target and try to hit as close as possible to the center.\n",
     "\n",
     "The center of the target is represented by the values (0, 0) on the coordinate axes.\n",
@@ -61,8 +62,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
-    "\n"
+    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "True\n",
+    "```"
    ]
   },
   {
@@ -71,8 +81,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
-    "\n"
+    "# 2. Calculate how many arrows have fallen in each quadrant.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "(10, 6, 2, 2)\n",
+    "```"
    ]
   },
   {
@@ -82,8 +101,18 @@
    "outputs": [],
    "source": [
     "# 3. Find the point closest to the center. Calculate its distance to the center\n",
-    "# Defining a function that calculates the distance to the center can help.\n",
-    "\n"
+    "# Defining a function that calculates the distance to the center can help.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "(0, 2)\n",
+    "2.0\n",
+    "```"
    ]
   },
   {
@@ -93,8 +122,18 @@
    "outputs": [],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
-    "# must be picked up in the forest.\n",
-    "\n"
+    "# must be picked up in the forest.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "```\n",
+    "[(9, 9), (-8, -9)]\n",
+    "2\n",
+    "```"
    ]
   },
   {
