--- a/rock-paper-scissors/rock-paper-scissors.ipynb
+++ b/rock-paper-scissors/rock-paper-scissors.ipynb
@@ -32,12 +32,16 @@
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
     "\n",
+    "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
+    "\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "\n",
+    "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
+    "\n",
     "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
@@ -50,7 +54,7 @@
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
-    "\n",
+    " \n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
@@ -64,10 +68,16 @@
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
     "\n",
-    "\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
     "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: Depends on the inputs, you know how to play and what to expect. "
    ]
   },
   {
@@ -127,7 +137,7 @@
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "# Now there are more options\n",
-    " \n",
+    "\n",
     "\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
@@ -136,15 +146,22 @@
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
     "\n",
+    "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
-    "\n",
     "    \n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: Depends on the inputs, you know how to play and what to expect. "
    ]
   },
   {
