--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -41,6 +41,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "Days = 11\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Goals\n",
     "\n",
     "1. Treatment of variables\n",
@@ -84,26 +94,75 @@
     "\n",
     "\n",
     "\n",
-    "# Print the result with print('Days =', days)\n",
-    "\n",
-    "\n",
-    "# What is its maximum displacement in a day? And its minimum?\n",
-    "\n",
-    "\n",
-    "\n",
-    "# What is its average progress?\n",
-    "\n",
-    "\n",
-    "# What is the standard deviation of your displacement during the day?\n",
-    "\n"
+    "# Print the result with print('Days =', days)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "Days = 6\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# What is its maximum displacement in a day? And its minimum?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "77 12\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What is its average progress?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "38.09090909090909\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What is the standard deviation of your displacement during the day?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**: \n",
+    "```\n",
+    "17.159437082600803\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
