pequeños cambios en output lyrics

--- a/lyrics/lytics.ipynb
+++ b/lyrics/lytics.ipynb
@@ -132,7 +132,7 @@
    "source": [
     "### Step 2\n",
     "\n",
-    "Create a code that prints all the lyrics"
+    "Create a code that prints the complete lyrics. "
    ]
   },
   {
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def baby_shark_lyrics():     \n",
+    "def baby_shark_lyrics():  \n",
     "    # your code here\n",
     "    \n"
    ]
@@ -251,7 +251,9 @@
     "```\n",
     "\n",
     "### Step 5\n",
-    "Baby shark lyrics can be read in the songs folder. Try to store the content of that file in a variable and check if it is equal to the output of your baby_shark_lyrics function"
+    "Baby shark lyrics can be read in the songs folder. Try to store the content of that file in a variable called **text** and check if it is equal to the output of your baby_shark_lyrics function\n",
+    "\n",
+    "https://www.pythonforbeginners.com/files/reading-and-writing-files-in-python"
    ]
   },
   {
@@ -262,7 +264,7 @@
    "source": [
     "# your code here\n",
     "\n",
-    "  "
+    "   "
    ]
   },
   {
@@ -274,6 +276,17 @@
     "# Check\n",
     "\n",
     "print(baby_shark_lyrics() == text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "\n",
+    "```\n",
+    "True\n",
+    "```"
    ]
   },
   {
@@ -328,11 +341,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Expected output**:\n",
+    "\n",
+    "```\n",
+    "True\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
