--- a/lyrics/lytics.ipynb
+++ b/lyrics/lytics.ipynb
@@ -49,6 +49,7 @@
     "3. print()\n",
     "4. Use of functions\n",
     "5. Open files\n",
+    "6. Refactoring\n",
     "\n",
     "## Hints\n",
     "\n",
@@ -97,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1\n",
+    "### Step 1: First Paragraph\n",
     "Create a code to print the first paragraph and asign it to a variable. "
    ]
   },
@@ -130,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2\n",
+    "### Step 2: Full song\n",
     "\n",
     "Create a code that prints the complete lyrics. "
    ]
@@ -179,8 +180,8 @@
     "Run away,… \n",
     "```\n",
     "\n",
-    "### Step 3\n",
-    "Now i want you must create a string variable to store all the characters and check if it is equal to the lyrics. Remenber de hint section. "
+    "### Step 3: Check output\n",
+    "Now i want you must create a string variable called **result** to store all the characters and check if it is equal to the lyrics. Remenber de hint section. "
    ]
   },
   {
@@ -201,7 +202,7 @@
    "source": [
     "# Check\n",
     "\n",
-    "print(res == babyshark)"
+    "print(result == babyshark)"
    ]
   },
   {
@@ -214,7 +215,7 @@
     "True\n",
     "```\n",
     "\n",
-    "### Step 4\n",
+    "### Step 4: Function\n",
     " Create a functions called babyshark() that generates the wanted output. "
    ]
   },
@@ -224,9 +225,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def baby_shark_lyrics():  \n",
+    "def baby_shark_lyrics():     \n",
     "    # your code here\n",
-    "    \n"
+    "    \n",
+    "    "
    ]
   },
   {
@@ -248,9 +250,14 @@
     "\n",
     "```\n",
     "True\n",
-    "```\n",
-    "\n",
-    "### Step 5\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 5: Files\n",
     "Baby shark lyrics can be read in the songs folder. Try to store the content of that file in a variable called **text** and check if it is equal to the output of your baby_shark_lyrics function\n",
     "\n",
     "https://www.pythonforbeginners.com/files/reading-and-writing-files-in-python"
@@ -263,8 +270,18 @@
    "outputs": [],
    "source": [
     "# your code here\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
     "\n",
-    "   "
+    "```\n",
+    "True\n",
+    "```"
    ]
   },
   {
@@ -276,6 +293,36 @@
     "# Check\n",
     "\n",
     "print(baby_shark_lyrics() == text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 6: Refactor\n",
+    "Now I want you to refactor your **baby_shark_lyrics** function in order to be less than 400 characters. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import inspect\n",
+    "\n",
+    "code = inspect.getsource(baby_shark_lyrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check\n",
+    "\n",
+    "print(len(code) < 400)"
    ]
   },
   {
@@ -299,7 +346,7 @@
     "\n",
     "Now let`s try with another lyric, you can find it in songs folder. \n",
     "\n",
-    "1. Create bottles_lyrics function"
+    "### Step 1. Create bottles_lyrics function"
    ]
   },
   {
@@ -308,15 +355,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here. \n",
-    "\n"
+    "def bottles_lyrics():\n",
+    "    # your code here. \n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Open the file"
+    "### Step 2. Open file"
    ]
   },
   {
@@ -350,6 +399,47 @@
     "True\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3: Check code\n",
+    "Now I want you to refactor your **bottles_lyrics** function in order to be less than 1000 characters. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import inspect\n",
+    "\n",
+    "code = inspect.getsource(bottles_lyrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check\n",
+    "\n",
+    "print(len(code) < 1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected output**:\n",
+    "\n",
+    "```\n",
+    "True\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
@@ -368,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
