baby shark finished

--- a/lyrics/lytics.ipynb
+++ b/lyrics/lytics.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "## Hints\n",
     "\n",
-    "* '\\n' is the character for new line. It must end every string in the third step\n",
+    "* '\\n' is the character for new line. It must end every string in the third step. \n",
     "\n",
     "\n",
     "## Solution"
@@ -258,7 +258,7 @@
    "metadata": {},
    "source": [
     "### Step 5: Files\n",
-    "Baby shark lyrics can be read in the songs folder. Try to store the content of that file in a variable called **text** and check if it is equal to the output of your baby_shark_lyrics function\n",
+    "Baby shark lyrics can be read in the songs folder. Try to store the content of that file in a variable called **text** and check if it is equal to the babyshark variable and the output of your baby_shark_lyrics function. \n",
     "\n",
     "https://www.pythonforbeginners.com/files/reading-and-writing-files-in-python"
    ]
@@ -271,6 +271,17 @@
    "source": [
     "# your code here\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check\n",
+    "\n",
+    "print(text == babyshark)"
    ]
   },
   {
@@ -299,8 +310,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Expected output**:\n",
+    "\n",
+    "```\n",
+    "True\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Step 6: Refactor\n",
-    "Now I want you to refactor your **baby_shark_lyrics** function in order to be less than 400 characters. "
+    "Now I want you to refactor your **baby_shark_lyrics** function in order to be less than 400 characters. If your code is larger than 400 characters, you should change baby_shark_lyrics function in order to shorten it."
    ]
   },
   {
@@ -311,17 +333,11 @@
    "source": [
     "import inspect\n",
     "\n",
-    "code = inspect.getsource(baby_shark_lyrics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "code = inspect.getsource(baby_shark_lyrics)\n",
+    "\n",
     "# check\n",
     "\n",
+    "print('Your baby_shark_lyrics functions has {} characters'.format(len(code)))\n",
     "print(len(code) < 400)"
    ]
   },
@@ -332,6 +348,7 @@
     "**Expected output**:\n",
     "\n",
     "```\n",
+    "Your baby_shark_lyrics functions has 367 characters\n",
     "True\n",
     "```"
    ]
@@ -427,6 +444,7 @@
    "source": [
     "# check\n",
     "\n",
+    "print('Your bottles_lyrics functions has {} characters'.format(len(code)))\n",
     "print(len(code) < 1000)"
    ]
   },
@@ -437,8 +455,18 @@
     "**Expected output**:\n",
     "\n",
     "```\n",
+    "Your bottles_lyrics functions has 837 characters\n",
     "True\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want a real challenge, follow the link below. Sign in and start coding!\n",
+    "\n",
+    "https://www.codewars.com/kata/baby-shark-lyrics-generator/train/python"
    ]
   }
  ],
