--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,21 +20,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days =  11\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "subida = 30\n",
+    "bajada = -20\n",
+    "distancia_subida = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "dias_totales = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
     "\n",
+    "while distancia_subida < 125:\n",
+    "    distancia_subida = distancia_subida + subida\n",
+    "    if distancia_subida < 125:\n",
+    "        distancia_subida = distancia_subida + bajada\n",
+    "    dias_totales = dias_totales +1\n",
     "\n",
-    "# Print the result with print('Days =', days)\n"
+    "# Print the result with print('Days =', days)\n",
+    "print(\"Days = \",dias_totales)\n"
    ]
   },
   {
@@ -79,22 +95,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "21\n",
+      "33\n",
+      "77\n",
+      "44\n",
+      "45\n",
+      "Dias =  6\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "caida = -20\n",
+    "distancia_acumulada = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "dias = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
+    "for distancia in advance_cm:\n",
+    "    if distancia_acumulada <=125:\n",
+    "        print(distancia)\n",
+    "        distancia_acumulada = distancia_acumulada + distancia\n",
+    "        if distancia_acumulada < 125:\n",
+    "            distancia_acumulada = distancia_acumulada + caida\n",
+    "        dias = dias + 1\n",
+    "    else:\n",
+    "        break\n",
     "\n",
-    "\n",
-    "\n",
-    "# Print the result with print('Days =', days)\n"
+    "# Print the result with print('Days =', days)\n",
+    "print(\"Dias = \",dias)"
    ]
   },
   {
@@ -109,11 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77 12\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is its maximum displacement in a day? And its minimum?\n"
+    "# What is its maximum displacement in a day? And its minimum?\n",
+    "print(max(advance_cm),min(advance_cm))"
    ]
   },
   {
@@ -128,11 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38.09090909090909\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is its average progress?\n"
+    "# What is its average progress?\n",
+    "print(sum(advance_cm)/len(advance_cm))"
    ]
   },
   {
@@ -181,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
