--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,20 +48,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "g_victories= 0\n",
+    "s_victories= 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "\n",
+    "for i in range(10):\n",
+    "    if gandalf[i] > saruman[i]:\n",
+    "        g_victories=g_victories+1\n",
+    "    elif gandalf[i] < saruman[i]:\n",
+    "        s_victories = s_victories+1\n",
+    "print(g_victories)\n",
+    "print(s_victories)\n"
    ]
   },
   {
@@ -77,12 +96,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
-    "# Print the result based on the winner.\n"
+    "# Print the result based on the winner.\n",
+    "if g_victories>s_victories:\n",
+    "    print(\"Gandalf wins\")\n",
+    "elif g_victories<s_victories:\n",
+    "    print(\"Saruman wins\")\n",
+    "else:\n",
+    "    print(\"tie battle\")"
    ]
   },
   {
@@ -140,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,11 +196,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 40, 40, 10, 50, 10, 40, 50, 10, 50] [45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Assign spell power lists to variables\n"
+    "# Assign spell power lists to variables\n",
+    "gandalf_power = []\n",
+    "saruman_power = []\n",
+    "for hechizo in gandalf:\n",
+    "    gandalf_power.append(POWER[hechizo])\n",
+    "\n",
+    "for hechizo in saruman:\n",
+    "    saruman_power.append(POWER[hechizo])\n",
+    "    \n",
+    "print(gandalf_power,saruman_power)\n"
    ]
   },
   {
@@ -183,22 +233,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
     "\n",
-    "\n",
-    "\n",
     "# Execution of spell clashes\n",
-    "\n",
+    "lista_victorias=[]\n",
     "# check clashes\n",
+    "for i in range(10):\n",
+    "    if gandalf_power[i] > saruman_power[i]:\n",
+    "        lista_victorias.append(\"g\")\n",
+    "    elif gandalf_power[i] < saruman_power[i]:\n",
+    "        lista_victorias.append(\"s\")\n",
     "\n",
     "# check for 3 wins in a row\n",
+    "g_3_wins_row = None\n",
+    "s_3_wins_row = None\n",
+    "\n",
+    "contador = 0\n",
+    "\n",
+    "for victoria in lista_victorias:\n",
+    "    if victoria == \"g\":\n",
+    "        contador = contador + 1\n",
+    "    else:\n",
+    "        contador = 0\n",
+    "if contador >=3:\n",
+    "    g_3_wins_row = True\n",
+    "else: \n",
+    "    g_3_wins_row = False\n",
+    "    \n",
+    "contador = 0\n",
+    " \n",
+    "for victoria in lista_victorias:\n",
+    "    if victoria == \"s\":\n",
+    "        contador = contador + 1\n",
+    "        \n",
+    "    else:\n",
+    "        contador = 0\n",
+    "if contador >=3:\n",
+    "    s_3_wins_row = True\n",
+    "else: \n",
+    "    s_3_wins_row = False\n",
     "\n",
     "# check the winner\n",
     "\n",
+    "if s_3_wins_row and not g_3_wins_row :\n",
+    "        print(\"Saruman wins\")\n",
+    "elif g_3_wins_row and not s_3_wins_row: \n",
+    "        print(\"Gandalf wins\")\n",
+    "else:\n",
+    "    print(\"Tendrá que comprobar quien consiguió 3 victorias segudas antes o si ninguno las consiguió\")\n",
     "# count sum of clashes\n"
    ]
   },
@@ -214,11 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.0\n",
+      "30.5\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Average of each of the spell lists.\n"
+    "# 3. Average of each of the spell lists.\n",
+    "print(sum(gandalf_power)/len(gandalf_power))\n",
+    "print(sum(saruman_power)/len(saruman_power))"
    ]
   },
   {
@@ -276,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
