--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -45,9 +45,21 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 1. Calculate the number of stops.\n"
+    "# 1. Calculate the number of stops.\n",
+    "len(stops)"
    ]
   },
   {
@@ -62,12 +74,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 13, 11, 10, 14, 10, 7, 5, 4]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
-    "# Each item depends on the previous item in the list + in - out.\n"
+    "# Each item depends on the previous item in the list + in - out.\n",
+    "lista_pasajeros_parada = []\n",
+    "pasajeros_actuales = 0\n",
+    "for parada in stops:\n",
+    "    pasajeros_actuales =pasajeros_actuales + parada[0]-parada[1]\n",
+    "    lista_pasajeros_parada.append(pasajeros_actuales)\n",
+    "    \n",
+    "lista_pasajeros_parada"
    ]
   },
   {
@@ -82,11 +112,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 3. Find the maximum occupation of the bus.\n"
+    "# 3. Find the maximum occupation of the bus.\n",
+    "max(lista_pasajeros_parada)"
    ]
   },
   {
@@ -101,12 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.333333333333334"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "sum(lista_pasajeros_parada)/len(lista_pasajeros_parada)\n"
    ]
   },
   {
@@ -137,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
