--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -58,11 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n"
+    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
+    "for i in range(len(points)):\n",
+    "    for j in range(len(points)):\n",
+    "        if j>i:\n",
+    "            if points[i]==points[j]:\n",
+    "                True"
    ]
   },
   {
@@ -77,11 +82,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 6, 2, 2]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 2. Calculate how many arrows have fallen in each quadrant.\n"
+    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
+    "flechas_cuadrantes = [0,0,0,0]\n",
+    "for tiro in points:\n",
+    "    if tiro[0] > 0 and tiro[1]>0:\n",
+    "        flechas_cuadrantes[0] = flechas_cuadrantes[0] + 1\n",
+    "    elif tiro[0] < 0 and tiro[1] > 0:\n",
+    "        flechas_cuadrantes[1] = flechas_cuadrantes[1] + 1\n",
+    "    elif tiro[0] < 0 and tiro[1] <0:\n",
+    "        flechas_cuadrantes[2] = flechas_cuadrantes[2] + 1\n",
+    "    elif tiro[0] > 0 and tiro[1] <0:\n",
+    "        flechas_cuadrantes[3] = flechas_cuadrantes[3] + 1\n",
+    "\n",
+    "flechas_cuadrantes"
    ]
   },
   {
@@ -96,12 +124,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 2)\n",
+      "2.0\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Find the point closest to the center. Calculate its distance to the center\n",
-    "# Defining a function that calculates the distance to the center can help.\n"
+    "# Defining a function that calculates the distance to the center can help.\n",
+    "import math\n",
+    "def get_distancia_centro(punto):\n",
+    "    return math.sqrt(punto[0]**2 + punto[1]**2)\n",
+    "\n",
+    "lista_distancia_centro = []\n",
+    "\n",
+    "for punto in points:\n",
+    "    lista_distancia_centro.append(get_distancia_centro(punto))\n",
+    "\n",
+    "print(points[lista_distancia_centro.index(min(lista_distancia_centro))])    \n",
+    "print(min(lista_distancia_centro))\n"
    ]
   },
   {
@@ -117,12 +165,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(9, 9), (-8, -9)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
-    "# must be picked up in the forest.\n"
+    "# must be picked up in the forest.\n",
+    "puntos_fuera=[]\n",
+    "\n",
+    "for punto in points:\n",
+    "    if get_distancia_centro(punto) > 9 :\n",
+    "        puntos_fuera.append(punto)\n",
+    "print(puntos_fuera)\n",
+    "len(puntos_fuera)"
    ]
   },
   {
@@ -160,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
