--- a/mission-impossible/mission-impossible.ipynb
+++ b/mission-impossible/mission-impossible.ipynb
@@ -38,11 +38,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23, 20, 15, 40, 15]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Show volumes that exceed 10 dBs\n"
+    "# Show volumes that exceed 10 dBs\n",
+    "volumes_more_10dbs = []\n",
+    "for volume in dbs:\n",
+    "    if volume > 10:\n",
+    "        volumes_more_10dbs.append(volume)\n",
+    "volumes_more_10dbs"
    ]
   },
   {
@@ -57,11 +73,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 20, 23, 28, 29]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Show the moments (indexs of the list) in which a volume exceeds 10 dBs\n"
+    "# Show the moments (indexs of the list) in which a volume exceeds 10 dBs\n",
+    "moments = []\n",
+    "for volume in volumes_more_10dbs:\n",
+    "    for i in range(len(dbs)):\n",
+    "        if volume == dbs[i] and i not in moments:\n",
+    "            moments.append(i)\n",
+    "moments.sort()\n",
+    "moments"
    ]
   },
   {
@@ -76,12 +110,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9, 23), (20, 20), (23, 15), (28, 40), (29, 15)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Combine the last two exercises to show the moments when a \n",
-    "# volume exceeds 10 dBs. HINT: Use the enumerate function\n"
+    "# volume exceeds 10 dBs. HINT: Use the enumerate function\n",
+    "moments_when_exceeds = []\n",
+    "for i in range(len(moments)):\n",
+    "    moments_when_exceeds.append((moments[i],volumes_more_10dbs[i]))\n",
+    "moments_when_exceeds"
    ]
   },
   {
@@ -96,13 +145,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alarm!\n"
+     ]
+    }
+   ],
    "source": [
     "# Ethan is discovered if two consecutive volumes are greater than 10 dB. Is he safe? \n",
     "# HINT: Beware of the extremes, do not have an error of the type\n",
-    "# IndexError: list index out of range\n"
+    "# IndexError: list index out of range\n",
+    "for i in range(len(moments)-1):\n",
+    "    if (moments[i] + 1) == moments[i+1] :\n",
+    "        print(\"Alarm!\")"
    ]
   },
   {
@@ -140,11 +200,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre hacking:\n",
+      " [0, 1, 0, 0, 0, 0, 1, 0, 1, 23, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 40, 15, 0, 0]\n",
+      "Pos hacking:\n",
+      " [0, 1, 0, 0, 0, 0, 1, 0, 1, 11, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 22, 15, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "dbs = [0, 1, 0, 0, 0, 0, 1, 0, 1, 23, 1, 0, 1, 1, 0, 0, 0, \n",
+    "       1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 40, 15, 0, 0]\n",
+    "print(\"Pre hacking:\\n\",dbs)\n",
+    "for i in range(len(dbs)):\n",
+    "    if dbs[i] > 20 and dbs[i]<=30:\n",
+    "        dbs[i] = dbs[i]-12\n",
+    "    elif dbs[i] > 30:\n",
+    "        dbs[i] = dbs[i]-18\n",
+    "\n",
+    "print(\"Pos hacking:\\n\",dbs)"
    ]
   },
   {
@@ -177,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
