--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "9"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "[10, 13, 11, 10, 14, 10, 7, 5, 4]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "14"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,23 +143,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "9.333333333333334"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.333333333333334\n",
+      "3.197221015541813\n"
+     ]
     }
    ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "sum(lista_pasajeros_parada)/len(lista_pasajeros_parada)\n"
+    "import math\n",
+    "print(sum(lista_pasajeros_parada)/len(lista_pasajeros_parada))\n",
+    "\n",
+    "sumatoria = 0\n",
+    "\n",
+    "for pasajeros in lista_pasajeros_parada:\n",
+    "    sumatoria = sumatoria + (pasajeros - (sum(lista_pasajeros_parada)/len(lista_pasajeros_parada)))**2\n",
+    "print(math.sqrt(sumatoria/len(lista_pasajeros_parada)))"
    ]
   },
   {
