--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -95,19 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n",
-      "21\n",
-      "33\n",
-      "77\n",
-      "44\n",
-      "45\n",
       "Dias =  6\n"
      ]
     }
@@ -125,7 +119,7 @@
     "# Write the code that solves the problem\n",
     "for distancia in advance_cm:\n",
     "    if distancia_acumulada <=125:\n",
-    "        print(distancia)\n",
+    "        \n",
     "        distancia_acumulada = distancia_acumulada + distancia\n",
     "        if distancia_acumulada < 125:\n",
     "            distancia_acumulada = distancia_acumulada + caida\n",
@@ -149,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,11 +199,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.159437082600803"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What is the standard deviation of your displacement during the day?\n"
+    "# What is the standard deviation of your displacement during the day?\n",
+    "import math\n",
+    "sumatoria = 0\n",
+    "for distancia in advance_cm:\n",
+    "    sumatoria = sumatoria + (distancia - sum(advance_cm)/len(advance_cm))**2\n",
+    "math.sqrt(sumatoria/len(advance_cm))"
    ]
   },
   {
