--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -339,11 +339,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.881943016134134\n",
+      "15.56438241627338\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4. Standard deviation of each of the spell lists.\n"
+    "# 4. Standard deviation of each of the spell lists.\n",
+    "import math\n",
+    "sumatoria = 0\n",
+    "for poder in gandalf_power:\n",
+    "    sumatoria = sumatoria + (poder - sum(gandalf_power)/len(gandalf_power))**2\n",
+    "print(math.sqrt(sumatoria/len(gandalf_power)))\n",
+    "\n",
+    "sumatoria = 0\n",
+    "for poder in saruman_power:\n",
+    "    sumatoria = sumatoria + (poder - sum(saruman_power)/len(saruman_power))**2\n",
+    "print(math.sqrt(sumatoria/len(saruman_power)))"
    ]
   },
   {
